[package]
name = "tracker-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12.0"
reqwest = "0.11.14"
scraper = "0.14.0"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
url = "2.3.1"
